# svy

./: .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: svy-io-wheels.yml  svy-rs-wheels.yml  svy-tests.yml  svy-wheels.yml
