[project]
name = "svy-workspace"
version = "0.0.3"
description = "Workspace for the svy ecosystem (svy, svy-sae, svy-io, etc.)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Samplics LLC", email = "msdiallo@samplics.org" }]

dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.7.7",
    "pytest>=8.3.4",
]
# ------------------------------------------------------------
# uv workspace configuration
# ------------------------------------------------------------
[tool.uv.workspace]
members = [
  # "packages/svy",
  # "packages/svy-sae",
  # "packages/svy-io",
  "packages/svy-rs",
]

[tool.uv.sources]
# svy = { workspace = true }
# svy-sae = { workspace = true }
# svy-io = { workspace = true }
svy-rs = { workspace = true }



# ------------------------------------------------------------
# Shared tooling defaults (repo-wide)
# ------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
testpaths = ["packages"]
markers = [
  "optional: mark test as optional (e.g. requires extra dependencies)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 99
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I001", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_no_return = true
warn_return_any = true
no_implicit_optional = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
exclude = [".venv"]
